# E-Waste-Scanner

./: .gitignore  CLAUDE.md  CONTEXT.md  README.md  packages.txt  pyproject.toml
app/: __init__.py  requirements.txt  streamlit_app.py
app/components/: __init__.py  dashboard.py  overlay.py
docs/: labeling-guide.md
docs/adr/: 0001-model-architecture-and-size.md  0002-valuation-and-impact-methodology.md  0003-environment-and-tooling.md  README.md
docs/agents/: issue-tracker.md
reference/: SOURCES.md  class_map.yaml  impact_factors.csv  material_factors.csv  materials_composition.csv
scripts/: autobox_kaggle.py  boxify_labels.py  evaluate.py  oversample_clutter.py  prepare_data.py  train.py
src/ewaste/: __init__.py  bootstrap.py  config.py  ports.py
src/ewaste/adapters/: __init__.py  detector.py  market.py  repository.py
src/ewaste/domain/: __init__.py  model.py  services.py
src/ewaste/service_layer/: __init__.py  receipt.py  scan_service.py
tests/: conftest.py
tests/integration/: test_app_smoke.py  test_bootstrap.py  test_detector.py  test_market.py  test_overlay.py  test_repository.py  test_scan_service.py
tests/unit/: test_reference_data.py  test_services.py
