[project]
name = "ewaste-scanner"
version = "0.1.0"
description = "Upload-based e-waste object detection with recoverable-value and environmental-impact estimation."
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "ultralytics>=8.3",
    "streamlit>=1.40",
    "yfinance>=0.2.50",
    "pandas>=2.2",
    "pillow>=11.0",
    "opencv-python-headless>=4.10",
    "pyyaml>=6.0",
    "numpy>=2.1",
    "requests>=2.32",
]

# torch/torchvision are intentionally NOT core dependencies. They are split into
# mutually-exclusive extras so the same project resolves to a small CPU build for
# deployment (Streamlit Community Cloud, 1 GB RAM) or a CUDA build for local GPU
# training. Always sync with exactly one of these:
#   uv sync --extra cpu   # tests, CI, deployment
#   uv sync --extra gpu   # local GPU training (CUDA 13.x)
[project.optional-dependencies]
cpu = [
    "torch>=2.8",
    "torchvision>=0.23",
]
gpu = [
    "torch>=2.8",
    "torchvision>=0.23",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
]

[tool.uv]
# torch is provided only by the mutually exclusive `cpu` / `gpu` extras, so every
# sync/run MUST name exactly one extra (uv has no "default extra"):
#   uv sync --extra cpu      uv run --extra cpu streamlit run app/streamlit_app.py
#   uv sync --extra gpu      uv run --extra gpu python scripts/train.py
# The conflicts entry makes uv swap cpu<->gpu cleanly when you switch.
conflicts = [
    [{ extra = "cpu" }, { extra = "gpu" }],
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu130", extra = "gpu" },
]
torchvision = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu130", extra = "gpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ewaste"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
